added swagger socummentation using swagger
